[Fix]: Disabled ExtensionModal Swipeable up/down on mobile

--- a/src/components/ExtensionModal/ExtensionModal.scss
+++ b/src/components/ExtensionModal/ExtensionModal.scss
@@ -63,8 +63,8 @@
       color: var(--text-color);
 
       &::-webkit-scrollbar {
-        width: 4px;
-        height: 4px;
+        width: 6px;
+        height: 6px;
       }
       &::-webkit-scrollbar-track {
         background: transparent;
